Fixed CSS so it looks good on mobile

--- a/react_ui/src/css/PlayGame.css
+++ b/react_ui/src/css/PlayGame.css
@@ -1,36 +1,36 @@
 .playgame-container {
   display: flex;
+  flex-direction: column;
   justify-content: center; /* centers board horizontally */
   align-items: center;     /* centers board vertically if needed */
-  height: 100vh;           /* full viewport height */
+  width: 100%;          /* full viewport height */
   padding: 20px;
   box-sizing: border-box;
   background: linear-gradient(135deg, #6b46c1, #3182ce);
   gap: 10px;
+  min-height: 100vh;
 }
 
 .playgame-info {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  height: 100%;
   width: 100%;
-  max-height: 90vh;
 }
 
 .playgame-board { 
   display: flex; 
   justify-content: center; 
   width: 100%; 
-  height: 100%; 
-  max-height: 90vh; /* board will not exceed 90% of viewport height */ 
+  /* height: 100%;  */
+  /* overflow-y: scroll; */
 }
 
 .board {
   display: grid;
   gap: 0px;
-  max-height: 100%; /* use up available height in card */
-  width: auto;      /* width will scale automatically to maintain square cells */
+  height: 100%; /* use up available height in card */
+  width: 100%;      /* width will scale automatically to maintain square cells */
   grid-auto-rows: 1fr; /* ensures equal row heights */
 }
 
@@ -98,7 +98,6 @@
   font-size: clamp(13px, 1.8vw, 16px);
   font-weight: 500;
   text-align: center;
-  max-width: 480px;
 }
 
 .loading-text {
